--- a/AnyDomain/appsettings.json
+++ b/AnyDomain/appsettings.json
@@ -9,8 +9,8 @@
   "Kestrel": {
     "Certificates": {
       "Default": {
-        "Path": "root.pem",
-        "KeyPath": "key.pem"
+        "Path": "../RootCert/root.pem",
+        "KeyPath": "../RootCert/key.pem"
       }
     },
     "Endpoints": {
