--- a/AnyDomain/appsettings.json
+++ b/AnyDomain/appsettings.json
@@ -9,14 +9,14 @@
   "Kestrel": {
     "Certificates": {
       "Default": {
-        "Path": "../RootCert/root.pem",
-        "KeyPath": "../RootCert/key.pem"
+        "Path": "localhost.pfx"
       }
     },
     "Endpoints": {
       "Http": {
         "Url": "http://localhost:5000"
-      },
+      }
+      ,
       "Https": {
         "Url": "https://localhost:5001"
       }
